Task BJS2-68746 changes based on PR review comments removed Optional driven logic added code clean up